# trading-platform

./: .clang-format  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  cpu_watch.sh  requirements.txt  rerout_analysis.py  run.sh  server_config.ini  trader_config.ini
benchmarks/: CMakeLists.txt  build.sh
benchmarks/config/: bench_client_config.ini  bench_server_config.ini  server_config.ini
benchmarks/src/: bench_bus.cpp  bench_fbs_serializer.cpp  bench_lfq.cpp  bench_lock_free_containers.cpp  bench_main.cpp  bench_miscelaneous.cpp  bench_order_book.cpp  bench_proto_serializer.cpp  bench_serializers.cpp  bench_server.cpp  bench_server.hpp  bench_utils.cpp  benchmark.cpp
benchmarks/src/utils/: bench_utils.hpp  test_data.hpp  test_utils.hpp
client/: CMakeLists.txt  client_config.ini
client/config/: client_config.ini
client/src/: client_command.hpp  client_command_parser.hpp  client_connection_manager.hpp  client_connection_state.hpp  client_control_center.hpp  client_events.hpp  client_ticker_data.hpp  client_types.hpp  connection_manager.hpp  connection_state.hpp  control_center.hpp  events.hpp  main.cpp  market_data.hpp  network_connection_manager.hpp  trade_engine.hpp  traits.hpp  trusted_connection_manager.hpp
client/src/commands/: client_command.hpp  client_command_parser.hpp  command.hpp  command_parser.hpp
client/src/config/: client_config.cpp  client_config.hpp  client_config_reader.hpp
client/src/connection/: network_connection_manager.hpp  trusted_connection_manager.hpp
client/src/execution/: market_data.hpp  trade_engine.hpp
client/src/network/: connection_state.hpp  network_client.hpp
common/: CMakeLists.txt
common/cmake/: code_generator.cmake  fbs_code_generator.cmake  proto_code_generator.cmake  sbe_code_generator.cmake
common/config/: config.ini  server_config.ini  trader_config.ini
common/schema/: domain_messages.fbs  marketdata.fbs  metadata.fbs  servercmd.fbs  tradercmd.fbs
common/src/: acquirer.hpp  app_context.hpp  appender.hpp  console_manager.hpp  console_reader.hpp  control_center.hpp  ctx_runner.hpp  event_bus.hpp  event_fd.hpp  init_logger.hpp  inline_callable.hpp  internal_error.hpp  io_ctx.hpp  io_result.hpp  lfq_runner.hpp  locker.hpp  logger.hpp  logger_manager.hpp  logging.hpp  mpsq_queue.hpp  network_traits.hpp  rtt_tracker.hpp  slot_buffer.hpp  sloth_buffer.hpp  status_code.hpp  vyukov_queue.hpp  warm_up_job.hpp  worker.hpp
common/src/adapters/: adapters.hpp  telemetry_adapter.hpp
common/src/bus/: bus.hpp  bus_holder.hpp  bus_hub.hpp  bus_limiter.hpp  bus_restrictor.hpp  busable.hpp  command_bus.hpp  data_bus.hpp  event_bus.hpp  message_bus.hpp  stream_bus.hpp  subscription_holder.hpp  system_bus.hpp  system_event_traits.hpp  system_safe_bus.hpp
common/src/concepts/: busable.hpp
common/src/config/: config.cpp  config.hpp  config_reader.hpp
common/src/console/: console_input_parser.hpp  control_center_base.hpp
common/src/containers/: batch_spsc.hpp  buffer_pool.hpp  huge_array.hpp  sequenced_spsc.hpp  sliding_buffer.hpp  turbo_spsc.hpp  vyukov_mpmc.hpp
common/src/control_center/: console_input_parser.hpp  control_center.hpp
common/src/db/: kafka_producer.hpp  postgres_adapter.hpp
common/src/id/: slot_id.hpp  slot_id_pool.hpp
common/src/network/: async_socket.hpp  async_tcp_socket.hpp  async_transport.hpp  boost_network_layer.hpp  buffer_pool.hpp  buffered_socket.hpp  channel.hpp  connection_status.hpp  network_buffer.hpp  network_layer.hpp  ring_buffer.hpp  routed_types.hpp  session_status.hpp  size_framer.hpp  socket_status.hpp
common/src/pool/: buffer_pool.hpp  lfq_pool.hpp  object_pool.hpp
common/src/runner/: ctx_runner.hpp  lfq_runner.hpp
common/src/serialization/: direct_serializer.hpp  serializer.hpp
common/src/shelf/: json_parser.hpp  meh_market_data.hpp  subscription_holder.hpp  system_safe_bus.hpp
common/src/sink/: balancing_event_sink.hpp  batch_io_sink.hpp  buffer_io_sink.hpp  command_sink.hpp  event_sink.hpp  hybrid_io_sink.hpp  io_sink.hpp  padded_counter.hpp  partition_event_sink.hpp  pool_event_sink.hpp
common/src/transport/: async_transport.hpp  channel.hpp  connection_status.hpp  transport.hpp  transportable.hpp
common/src/types/: boost_types.hpp  comparators.hpp  constants.hpp  container_types.hpp  domain_types.hpp  error_code.hpp  execution.hpp  functional_types.hpp  io_result.hpp  market_types.hpp  metadata_types.hpp  network_types.hpp  primitive_types.hpp  ptr_types.hpp  result.hpp  status_code.hpp  telemetry_types.hpp  template_types.hpp  ticker.hpp  type_converters.hpp  types.hpp
common/src/under_construction/: dpdk_allocator.hpp
common/src/utils/: binary_utils.hpp  boost_exceptions.cpp  futex_waiter.hpp  handler.hpp  huge_array.hpp  id_utils.hpp  rng.cpp  (+19 more)
monitor/: CMakeLists.txt  monitor_config.ini
monitor/config/: monitor_config.ini
monitor/src/: control_center.hpp  events.hpp  latency_tracker.hpp  main.cpp  monitor_command.hpp  monitor_command_parser.hpp  monitor_control_center.hpp  monitor_types.hpp  traits.hpp
server/: CMakeLists.txt
server/config/: server_config.ini
server/src/: authenticator.hpp  control_center.hpp  coordinator.hpp  engine.hpp  events.hpp  hft_server.hpp  main.cpp  network_server.hpp  network_session_manager.hpp  order_book.hpp  price_feed.hpp  schema.hpp  server.hpp  server_bus.hpp  server_command.hpp  server_command_parser.hpp  server_control_center.hpp  server_domain_types.hpp  server_event.hpp  server_events.hpp  server_ticker_data.hpp  server_types.hpp  server_utils.hpp  session_manager.hpp  session_manager_mt.hpp  ticker_data.hpp  traits.hpp  trusted_session_manager.hpp
test/unit/: CMakeLists.txt
tests/unit/: CMakeLists.txt
trader/: CMakeLists.txt
trader/config/: trader_config.ini
trader/src/: hft_trader.hpp  main.cpp  network_client.hpp  ticker_data.hpp  trade_engine.hpp  trader.hpp  trader_bus.hpp  trader_command.hpp  trader_command_parser.hpp  trader_control_center.hpp  trader_engine.hpp  trader_event.hpp  trader_events.hpp  trader_types.hpp  trader_utils.hpp
(+253 files in other folders)
